# HeadSlide

./: .gitignore  CMakeLists.txt  CMakePresets.json  PCH.h  README.md  plugin.cpp  vcpkg-configuration.json  vcpkg.json
include/: Config.h  Constants.h  HeadSlide.h  HeadSlideNPC.h  Manager.h  Papyrus.h  RaceMenuAPI.h
src/: Config.cpp  HeadSlide.cpp  HeadSlideNPC.cpp  Manager.cpp  Papyrus.cpp
